# tiny-qrcode-service

./: .gitignore  .vercelignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/qrcode_service/: app.py
src/tiny_qrcode_service/: app.py
static/: main.js  style.css
templates/: index.html
tests/: conftest.py  test_helpers.py  test_models.py  test_routes.py
